# advent-of-code-rs

./: Cargo.toml  README.md  run.sh  run_tests.sh
.github/workflows/: ci.yaml
src/: main.rs
src/aoc_2023/: day1.rs  day3.rs
src/aoc_2024/: day1.rs  day10.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc_2024/common/: mod.rs
src/aoc_2025/: day1.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc_2025/common/: mod.rs
src/lib/: mod.rs
src/solutions/: day1.rs  day2.rs
