[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"
authors = ["hmdebenque"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
error-chain = "0.12.4"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
tokio = { version = "1.35.1", features = ["macros"] }
test-log = "0.2.14"
